--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,11 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: HangNT
-  Date: 9/14/2021
-  Time: 10:44 PM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;-->
+<!--  Created by IntelliJ IDEA.-->
+<!--  User: HangNT-->
+<!--  Date: 9/14/2021-->
+<!--  Time: 10:44 PM-->
+<!--  To change this template use File | Settings | File Templates.-->
+<!--&#45;&#45;%>-->
+<!--<%@ page contentType="text/html;charset=UTF-8" language="java" %>-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -75,7 +75,7 @@
         <div class="sidepanel-inner d-flex flex-column">
             <a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
             <div class="app-branding" style="margin:auto;">
-                <a class="app-logo" href="index.jsp"><span class="logo-text" style="font-size: 27px;"><i>Food
+                <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>Food
                                 Review</i></span></a>
             </div>
             <!--//app-branding-->
@@ -83,7 +83,7 @@
             <nav id="app-nav-main" class="app-nav app-nav-main flex-grow-1">
                 <ul class="app-menu list-unstyled accordion" id="menu-accordion">
                     <li class="nav-item ">
-                        <a class="nav-link active " href="index.jsp">
+                        <a class="nav-link active " href="index.html">
                                 <span class="nav-icon">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door"
                                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -287,7 +287,7 @@
         <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
         <small class="copyright" style="color: black;">© 2021 Copyright <i class="fas fa-heart"
                                                                            style="color: #fb866a;"></i> by <a
-                class="app-link" href="index.jsp">food.review.com</a></small>
+                class="app-link" href="index.html">food.review.com</a></small>
 
     </div>
 </footer>
