fix jsp to html

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,11 +1,4 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: HangNT
-  Date: 9/14/2021
-  Time: 10:44 PM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;<%@ page contentType="text/html;charset=UTF-8" language="java" %>&#45;&#45;%>-->
 <html>
 
 <head>
@@ -66,7 +59,7 @@
                 <div class="col">
                     <a class="link-effect" href="#">
                     </a>
-                    <a class="link-effect float-right" href="reset-password.jsp">
+                    <a class="link-effect float-right" href="reset-password.html">
                         <i class="fas fa-question fa-fw mr-1"></i>Forgot password
                     </a><br/><br/>
                 </div>
