--- a/src/main/webapp/reset-password.html
+++ b/src/main/webapp/reset-password.html
@@ -1,11 +1,4 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: HangNT
-  Date: 9/14/2021
-  Time: 10:44 PM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;<%@ page contentType="text/html;charset=UTF-8" language="java" %>&#45;&#45;%>-->
 <html>
 
 <head>
@@ -44,13 +37,13 @@
                 <label>
                     <i class="fas fa-user fa-fw"></i>
                 </label>
-                <input type="text" class="form-control" placeholder="Phone Number" name="txtEmployeeCode" required/>
+                <input type="text" class="form-control" placeholder="Email" name="txtEmployeeCode" required/>
             </div>
 
             <br>
             <div class="form-group">
                 <div class="col">
-                    <a href="login.jsp">
+                    <a href="login.html">
                         <button type="button" class="btn btn-sm">
                             <i class="fas fa-sign-in-alt fa-fw mr-1"></i>Send
                         </button>
@@ -61,7 +54,7 @@
                 <div class="col">
                     <a class="link-effect" href="#">
                     </a>
-                    <a class="link-effect float-right" href="login.jsp">
+                    <a class="link-effect float-right" href="login.html">
                         <i class="fas fa-question fa-fw mr-1"></i>Login
                     </a><br/><br/>
                 </div>
