--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -1,11 +1,4 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: HangNT
-  Date: 9/14/2021
-  Time: 10:44 PM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;<%@ page contentType="text/html;charset=UTF-8" language="java" %>&#45;&#45;%>-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,11 +45,11 @@
                                                                         alt="Avatar" style="border-radius: 50%;">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="user-dropdown-toggle">
-                                <li><a class="dropdown-item" href="account.jsp">Account</a></li>
+                                <li><a class="dropdown-item" href="account.html">Account</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="login.jsp">Log Out</a></li>
+                                <li><a class="dropdown-item" href="login.html">Log Out</a></li>
                             </ul>
                         </div>
                         <!--//app-user-dropdown-->
@@ -100,7 +93,7 @@
                     <!--//nav-item-->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="employee.html">
+                        <a class="nav-link" href="user.html">
                                 <span class="nav-icon">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-card-list"
                                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +113,7 @@
                     <!--//nav-item-->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="topic.jsp">
+                        <a class="nav-link" href="topic.html">
                                 <span class="nav-icon">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-folder"
                                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
