--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,11 +1,4 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: Admin
-  Date: 9/19/2021
-  Time: 1:26 AM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%@ page contentType="text/html;charset=UTF-8" language="java" %>-->
 <html>
 <head>
     <meta charset="utf-8">
