--- a/src/main/webapp/sigup.html
+++ b/src/main/webapp/sigup.html
@@ -1,4 +1,4 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;<%@ page contentType="text/html;charset=UTF-8" language="java" %>&#45;&#45;%>-->
 <html>
 
 <head>
@@ -56,10 +56,12 @@
                     <i class="fas fa-key fa-fw"></i>
                 </label>
                 <input type="password" class="form-control" placeholder="Password" name="txtPassword" required/>
-                 <label>
-                     <i class="fas fa-key fa-fw"></i>
-                 </label>
-                 <input type="password" class="form-control" placeholder="Re-enter Password" name="txtRePassword" required/>
+            </div>
+            <div class="form-group">
+                <label>
+                    <i class="fas fa-key fa-fw"></i>
+                </label>
+                <input type="password" class="form-control" placeholder="Re-enter Password" name="txtRePassword" required/>
             </div>
             <br>
             <div class="form-group">
